<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textAlignment="center"
        android:textColor="@color/textgray" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/pu_vector" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/app_copyright_2"
        android:textAlignment="center"
        android:textColor="@color/textgray" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allrightsreserved"
        android:textAlignment="center"
        android:textColor="@color/textgray" />

    <TextView
        android:id="@+id/termsandpolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/help_policy"
        android:textAlignment="center"
        android:textColor="@color/lightgreen" />

</LinearLayout>
