<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/help_faq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="20dp"
        android:text="@string/help_faq"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"></View>

    <TextView
        android:id="@+id/help_contactus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="20dp"
        android:text="@string/help_contactus"
        android:textColor="@color/black" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"></View>

    <TextView
        android:id="@+id/help_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="20dp"
        android:text="@string/help_policy"
        android:textColor="@color/black" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"></View>

    <TextView
        android:id="@+id/help_appinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="20dp"
        android:text="@string/help_appinfo"
        android:textColor="@color/black" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"></View>

    <TextView
        android:id="@+id/help_howtouse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="20dp"
        android:text="@string/help_howtouse"
        android:textColor="@color/black" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"></View>

</LinearLayout>
