<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_excel_generation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="20dp"
        android:text="@string/settings_excel_generation"
        android:textColor="@color/gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"></View>

    <TextView
        android:id="@+id/settings_pdf_generation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="20dp"
        android:text="@string/settings_pdf_generation"
        android:textColor="@color/gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"></View>

    <TextView
        android:id="@+id/settings_vcf_generation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="20dp"
        android:text="@string/settings_vcf_generation"
        android:textColor="@color/gray" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"></View>

    <TextView
        android:id="@+id/settings_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="20dp"
        android:text="@string/settings_language"
        android:textColor="@color/gray" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"></View>


</LinearLayout>
